# proligent-xml-generator-python

./: .cspell.json  .gitattributes  .gitignore  .kics.yml  .markdownlint.yml  .mega-linter.yml  .yamllint.yml  LICENSE  README.md  instructions.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/: renovate.json
.github/workflows/: build.yml  publish.yml
docs/: overview.excalidraw
docs/developer/: change-validation.md  developer-guidelines.md
docs/user/: manufacturing-information-model.md
scripts/: generate_help.py
src/proligent/: model.py  xml_validate.py
src/proligent/datawarehouse/: datawarehouse_measure.py
test/: __init__.py  test.py  xml_scenario_runner.py
test/archive/: proligent_processor.py  test.py
test/expected/: Proligent_complex_oprun.xml  Proligent_partial_operation_run.xml  Proligent_readme_example1.xml  Proligent_readme_example2.xml  Proligent_simple_oprun_normal_order.xml  Proligent_simple_oprun_reverse_order.xml
test/resources/: invalid_product_unit_missing_full_name.xml
test/scenarios/: generate_complex_oprun.py  generate_partial_operation_run.py  generate_readme_example1.py  generate_readme_example2.py  generate_simple_oprun_normal_order.py  generate_simple_oprun_reverse_order.py  test_operation_runs_generations_scenarios.py
